--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,13 +1,23 @@
 <!doctype html>
 <html>
 <head>
-	<title>Demo Page</title>
+	<title>House Chores Generator</title>
+    
+    <link rel="stylesheet" type="text/css" href="style.css">
+    
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+    
     {{#each jsscripts}}
-    <script src="/static/{{this}}"></script>
+        <script src="/static/{{this}}"></script>
     {{/each}}
 </head>
+    
 <body>
-	{{{body}}}
+    <div id="navbar">
+        <li><a href="/">Home</a></li> 
+    </div>
+    
+    {{{body}}}
 </body>
+    
 </html>
