--- a/public/style.css
+++ b/public/style.css
@@ -1,22 +1,16 @@
 form {
 /*    border: 2px solid red;*/
-    width: 50%;
-/*    margin-top: -10px;*/
-    padding-bottom: 20px;
+/*    width: 50%;*/
 }
 
+/*
 fieldset {
     border-radius: 10px;
 }
+*/
 
-input[type="text"],
-input[type="time"] {
+input[type="text"] {
     width: 95%;
-    border-radius: 5px;
-}
-
-input[type="submit"] {
-    padding-top: 20px;
 }
 
 #navbar {
@@ -42,4 +36,62 @@ input[type="submit"] {
 #navbar a {
     text-decoration: none;
     color: yellow;
+}
+
+.title {
+/*    color: #FFF;*/
+    padding-left: 3%;
+}
+
+.login-panel,
+.signup-panel {
+/*    display: block;*/
+    background-color: #E5E5E5;
+    color: #666;
+    min-height: 150px;
+    overflow: auto;
+    width: 95%;
+    margin: 0 auto;
+/*    margin-bottom: 10px;*/
+/*    text-align: center;*/
+}
+
+.login-box,
+.signup-box {
+    width: 100%;
+    padding-top: 25px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.login-box label,
+.signup-box label {
+    width: 30%;
+    text-align: right;
+    padding-right: 5px;
+}
+
+.login-box input,
+.signup-box input{
+    width: 50%;
+    display: inline-block;
+    border-radius: 5px;
+}
+
+.login-form,
+.signup-form {
+    width: 50%;
+    display: inline-block;
+    text-align: center;
+    margin: 0 auto;
+}
+
+input#log-in,
+input#sign-up {
+    border: none;
+    height: 40px;
+    margin: 5px 10px;
+    text-transform: uppercase;
+    color: #EEE;
+    background-color: #303030;
 }
