--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-inverse">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">House Chores</a>
+          <a class="navbar-brand" href="/">House Chores</a>
         </div>
         <ul class="nav navbar-nav">
           <li><a href="#">Home</a></li>
