Complete authentication setup, minor changes

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,10 +6,10 @@
             <form class="login-form" method="post" action="/login" accept-charset="UTF-8">
                 <fieldset>
                     <label>Email:</label>
-                    <input type="email">
+                    <input type="email" name="email">
                     <br />
                     <label>Password:</label>
-                    <input type="password">
+                    <input type="password" name="password">
                     <br />
                 </fieldset>
                 
