--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,8 +31,12 @@
         <ul class="nav navbar-nav">
           <li><a href="#">Home</a></li>
           <li class="active"><a href="#">Generator</a></li>
-          <li><a href="login">Login</a></li>
-          <li><a href="register">Sign Up</a></li>
+            {{#if currentUser}}
+                <li><a href="logout">Logout</a></li>
+            {{else}}
+                <li><a href="login">Login</a></li>
+                <li><a href="register">Sign Up</a></li>
+            {{/if}}
         </ul>
       </div>
     </nav>
