--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -6,19 +6,19 @@
             <form class="signup-form" method="post" action="/register" accept-charset="UTF-8">
                 <fieldset>
                     <label>First Name:</label>
-                    <input type="text">
+                    <input type="text" name="firstName">
                     <br />
                     <label>Last Name:</label>
-                    <input type="text">
+                    <input type="text" name="lastName">
                     <br />
                     <label>Email:</label>
-                    <input type="email">
+                    <input type="email" name="email">
                     <br />
                     <label>Password:</label>
-                    <input type="password">
+                    <input type="password" name="password">
                     <br />
                     <label>Confirm Password:</label>
-                    <input type="password">
+                    <input type="password" name="confirmPassword">
                     <br />
                 </fieldset>
                 
