--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,7 +12,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>    
     
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" crossorigin="anonymous">
     
     <link rel="stylesheet" type="text/css" href="style.css">
     
@@ -22,24 +23,50 @@
 </head>
     
 <body>
+    
+    <nav class="navbar navbar-expand-lg navbar-inverse bg-light">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="/generator">Chore Generator</a>
+            </div>
+            <ul class="nav navbar-nav">
+                {{#if currentUser}}
+                    <li class="nav-item"><a class="nav-link" href="/chores">Current Chores</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="/chores/add">Add Chore</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/household">Manage Household</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/schedule">Schedule</a></li>
+                    <li class="nav-item"><a class="nav-link" href="logout">Logout</a></li>
+                {{else}}
+                    <li class="nav-item"><a class="nav-link" href="login">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="register">Sign Up</a></li>
+                {{/if}}
+            </ul>
+        </div>
+    </nav>
+    
+    
     <!-- Navigaton Bar -->
-    <nav class="navbar navbar-inverse">
+<!--
+    <nav class="navbar navbar-expand-lg navbar-inverse bg-light">
       <div class="container-fluid">
         <div class="navbar-header">
           <a class="navbar-brand" href="/">House Chores</a>
         </div>
-        <ul class="nav navbar-nav">
-          <li><a href="#">Home</a></li>
-          <li class="active"><a href="#">Generator</a></li>
-            {{#if currentUser}}
-                <li><a href="logout">Logout</a></li>
-            {{else}}
-                <li><a href="login">Login</a></li>
-                <li><a href="register">Sign Up</a></li>
-            {{/if}}
-        </ul>
+        <div class="">
+          <ul class="nav navbar-nav">
+              <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="generator">Generator</a></li>
+                
+                    <li class="nav-item"><a class="nav-link" href="logout">Logout</a></li>
+                
+                    <li class="nav-item"><a class="nav-link" href="login">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="register">Sign Up</a></li>
+                
+            </ul>
+        </div>
       </div>
     </nav>
+-->
     
     {{{body}}}
 </body>
