Set up basic random chore generator

--- a/views/generator.handlebars
+++ b/views/generator.handlebars
@@ -1,9 +1,20 @@
-<!-- Page Header -->
 <div class="jumbotron">
-<h1>Chores Generator</h1>
+<!--    <h1>Chores Generator</h1>-->
+    
+    <p id="choreResult">Let's play!</p>
+    
+    <div class="generate-button">
+        <button onclick="chooseChore()">Randomly pick a chore</button>
+    </div>
 </div>
 
+<!--
+<div id="choreResult">
+</div>
+-->
+
 <!-- Display current list of chores selected-->
+<!--
 <h1>Current Chores<h1>
 <table>
 
@@ -27,4 +38,6 @@
         {{/each}}
     </tbody>
 
-</table>
+</table>-->
+
+<script src="chooseChore.js"></script>
