--- a/public/style.css
+++ b/public/style.css
@@ -1,14 +1,3 @@
-form {
-/*    border: 2px solid red;*/
-/*    width: 50%;*/
-}
-
-/*
-fieldset {
-    border-radius: 10px;
-}
-*/
-
 input[type="text"] {
     width: 95%;
 }
@@ -39,21 +28,17 @@ input[type="text"] {
 }
 
 .title {
-/*    color: #FFF;*/
     padding-left: 3%;
 }
 
 .login-panel,
 .signup-panel {
-/*    display: block;*/
     background-color: #E5E5E5;
     color: #666;
     min-height: 150px;
     overflow: auto;
     width: 95%;
     margin: 0 auto;
-/*    margin-bottom: 10px;*/
-/*    text-align: center;*/
 }
 
 .login-box,
@@ -103,7 +88,8 @@ input[type="text"] {
     text-align: left;
 }
 
-.submit-button {
+.submit-button,
+.generate-button {
     text-align: center;
     margin-top: 25px;
 }
@@ -141,16 +127,27 @@ h3 {
     padding: 25px;
 }
 
-/*
-.addChore-form input {
-    width: 40%;
-    display: inline-block;
-}
-*/
-
 .form-group {
-/*    width: 50%;*/
     padding-left: 0%;
     width: 70%;
     margin: 0 auto;
+}
+
+.jumbotron {
+    margin: 0 auto;
+}
+
+.jumbotron p {
+    font-size: 4em;
+    min-height: 100px;
+    text-align: center;
+    align-content: center;
+}
+
+.jumbotron div {
+    margin: auto;
+}
+
+.jumbotron button {
+    text-transform: uppercase;
 }
