--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,2 +1,14 @@
-<h1>MySQL Results:</h1>
-<p>{{results}}</p>
+<div class="jumbotron">
+    <p id="choreResult">Let's play!</p>
+    
+    <div class="generate-button">
+        <button onclick="chooseChore()">Randomly pick a chore</button>
+    </div>
+</div>
+
+<div class="signup-info">
+    <p>Want to modify your own list? Split the chores among households?</p>
+    <p><a href="register">Sign up for full access!</a></p>
+</div>
+
+<script src="chooseChore.js"></script>
