--- a/views/chores.handlebars
+++ b/views/chores.handlebars
@@ -39,3 +39,30 @@
     </tbody>
 
 </table>
+
+<!-- Display current list of chores selected-->
+<!--
+<h1>Current Chores<h1>
+<table>
+
+    <thead>
+    <th>Name</th>
+    <th>Priority</th>
+    <th>Difficulty</th>
+    <th>Frequency</th>
+    </thead>
+
+    <tbody>
+        {{#each chore}}
+        <tr>
+            <td>{{name}}</td>
+            <td>{{priority}}</td>
+            <td>{{difficulty}}</td>
+            <td>{{frequency}}</td>
+            <td><button onclick="deleteChore({{id}})">Delete</button></td>
+            <td><a href="/chore/{{id}}">Update</a></td>
+        </tr>
+        {{/each}}
+    </tbody>
+
+</table>-->
