--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,10 +24,15 @@
     
 <body>
     
+    <!-- Navigaton Bar -->
     <nav class="navbar navbar-expand-lg navbar-inverse bg-light">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="/generator">Chore Generator</a>
+                {{#if currentUser}}
+                    <a class="navbar-brand" href="/generator">Chore Generator</a>
+                {{else}}
+                    <a class="navbar-brand" href="/">Chore Generator</a>
+                {{/if}}
             </div>
             <ul class="nav navbar-nav">
                 {{#if currentUser}}
@@ -43,30 +48,6 @@
             </ul>
         </div>
     </nav>
-    
-    
-    <!-- Navigaton Bar -->
-<!--
-    <nav class="navbar navbar-expand-lg navbar-inverse bg-light">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/">House Chores</a>
-        </div>
-        <div class="">
-          <ul class="nav navbar-nav">
-              <li class="nav-item active"><a class="nav-link" href="/">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="generator">Generator</a></li>
-                
-                    <li class="nav-item"><a class="nav-link" href="logout">Logout</a></li>
-                
-                    <li class="nav-item"><a class="nav-link" href="login">Login</a></li>
-                    <li class="nav-item"><a class="nav-link" href="register">Sign Up</a></li>
-                
-            </ul>
-        </div>
-      </div>
-    </nav>
--->
     
     {{{body}}}
 </body>
