Made Chores pages dynamic, revised Chore schema to include User

--- a/views/addChore.handlebars
+++ b/views/addChore.handlebars
@@ -36,7 +36,7 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="name">Frequncy:</label>
+                    <label for="name">Frequency:</label>
                     <input type="text" class="form-control" name="frequency" id="name" placeholder="Ex: once a week, once a month, etc">
                 </div>
                 
