--- a/views/chores.handlebars
+++ b/views/chores.handlebars
@@ -24,7 +24,7 @@
                     </button>
                 </td>
                 <td>
-                    <button type="submit" class="btn btn-warning btn-xs" onclick="deleteChore()">Delete</button>
+                    <button type="submit" class="btn btn-warning btn-xs" onclick="deleteChore({{_id}})">Delete</button>
                 </td>
             </tr>
         {{/each}}
